...
                      itemBuilder: (_) => <PopupMenuItem<String>>[
                        PopupMenuItem<String>(
                          value: AppConstants.tagHideCompleted,
                          child: Row(
                            children: [
                              const Text(
                                'Hide completed',
                                style: stySearchText,
                              ),
                              Checkbox(
                                activeColor: clrAccent,
                                value: tasksController.hideCompleted.value,
                                onChanged: (value) {
...
                      },
                      onTaskTap: () =>
                          Get.toNamed(AppRoutes.addEdit, arguments: task),
                    );
                  },
                )
              : const Center(child: Text('No tasks yet', style: styNoData)),
          floatingActionButton: GetBuilder<TasksController>(
            builder: (homeController) => FloatingActionButton(
              onPressed: () async {
                Get.toNamed(AppRoutes.addEdit);
              },
              backgroundColor: clrAccent,
...
